Correcao Bug Reverso

--- a/src/app/ideia/ideia.component.html
+++ b/src/app/ideia/ideia.component.html
@@ -14,7 +14,7 @@
 
 
 <!-- For exebindo as ideias -->
-<div *ngFor="let ideia of ideias.reverse()">
+<div *ngFor="let ideia of ideias">
     <h4>Titulo: {{ ideia.title }} </h4>
     <label> Descrição: {{ ideia.description }} </label>
     <h6> Colaborador: {{ ideia.name }} </h6>
