--- a/src/app/problema/problema.component.html
+++ b/src/app/problema/problema.component.html
@@ -14,7 +14,7 @@
 
 
 <!-- For exebindo as ideias -->
-<div *ngFor="let problema of problemas.slice().reverse()">
+<div *ngFor="let problema of problemas">
     <h4>Titulo: {{ problema.title }} </h4>
     <label> Descrição: {{ problema.description }} </label>
     <h6> Colaborador: {{ problema.name }} </h6>
