--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -1,2 +1,20 @@
-<button routerLink="ideia">Ideias</button> 
-<button routerLink="problema">Problemas</button>
+<div class="container">
+
+    <div class="row text-center mt-5">
+        <div class="col-12 mt-4 mb-3">
+            <img src="https://i.ibb.co/wg11vBp/speed.png" alt="" class="img-fluid img-logo">
+            <label class="title-page" >Central de Melhorias</label> 
+        </div>
+    </div>
+
+    <div class="row text-center mt-5">
+        <div class="col-12">
+            <button routerLink="ideia" class="btn-opcao">IDEIAS</button> 
+            <button routerLink="problema" class="btn-opcao btn-problema">PROBLEMAS</button>
+        </div>
+    </div>
+    
+</div>
+
+
+
