--- a/src/app/ideia/ideia.component.html
+++ b/src/app/ideia/ideia.component.html
@@ -1,24 +1,74 @@
-<h3>Compartilhe sua ideia aqui</h3>
+<div class="container">
+
+    <div class="row text-center mt-5 mb-1">
+        <div class="col-12">
+            <h4>Compartilhe sua ideia</h4>
+        </div>
+    </div>
 
 
-<form [formGroup]="ideiaForm" (ngSubmit)="onSubmit()">
+    <div class="row text-center">
+        <div class="col-12">
+            <form [formGroup]="ideiaForm" (ngSubmit)="onSubmit()">
 
-    <input type="text" placeholder="Digite um titulo" class="inputTxt" formControlName="titleIdeia">
-    <input type="text" placeholder="Descreva sua ideia" class="inputTxt" formControlName="descriptionIdeia">
-    <input type="text" placeholder="Digite seu nome" class="inputTxt" formControlName="name">
+                <input type="text" placeholder="Digite um titulo" class="inputTxt" formControlName="titleIdeia"> <br>
+                <textarea type="text" placeholder="Descreva sua ideia" class="inputTxt-Description" formControlName="descriptionIdeia"> </textarea> <br>
+                <input type="text" placeholder="Digite seu nome" class="inputTxt" formControlName="name"> <br>
+            
+                <button class="btn btn-primary mb-3 " type="submit" [disabled]="!ideiaForm.valid" (click)="openModal(template)">Enviar</button>
+            </form>
+        </div>
+    </div>
 
-    <button class="buttonInfo" type="submit" [disabled]="!ideiaForm.valid">Enviar</button>
-
-</form>
 
 
 
-<!-- For exebindo as ideias -->
-<div *ngFor="let ideia of ideias">
-    <h4>Titulo: {{ ideia.title }} </h4>
-    <label> Descrição: {{ ideia.description }} </label>
-    <h6> Colaborador: {{ ideia.name }} </h6>
+    <div class="row text-center mt-5 mb-2">
+        <div class="col-12">
+            <h5>Ideias adicionadas recentemente</h5>
+        </div>
+    </div>
+
+
+    <!-- For exebindo as ideias -->
+    <div class="row text-center ">
+        <div class="col-12 text-left">
+            <div *ngFor="let ideia of ideias" class="mb-4 card-infos">
+                <div class="head-card mb-3">
+                    <h5 class="mr-4">{{ ideia.title }} </h5>
+                </div>
+                <div class="ml-4 mr-4 mb-2">
+                    <strong class="font-wigth ">Descrição: </strong> <label class=""> {{ ideia.description }} </label> <br>
+                <strong class="">Colaborador: </strong> <label class="">{{ ideia.name }} </label>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    <!-- Modal de mensagem de sucesso -->
+    <ng-template #template>
+        <div class="modal-header text-center">
+            <img src="https://i.ibb.co/6Fs2CjH/190411.png" class="img-fluid img-sucess" alt=""> <h4 class="modal-title pull-center">Registrado com Sucesso!</h4>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <img src="https://i.ibb.co/v12Lj7v/75-smile.gif" class="img-fluid" alt="">  
+        </div>
+    </ng-template>
+
 
 </div>
+
+
+
+
+
+
+
+
+
 
 <!-- .slice().reverse()  -->
