--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,89 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+.card-infos{
+    margin-left: 20%;
+    margin-right: 30%;
+    width: 60%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    border-width: 3px;
+    border-color: rgb(129, 255, 167);
+    border-style: solid;
+}
+.head-card{
+    background-color:rgb(129, 255, 167);
+    width: 100%;
+    height: 40px;
+    padding-top: 6px;
+    padding-left: 20px;
+}
+
+.card-infos-problema{
+    margin-left: 20%;
+    margin-right: 30%;
+    width: 60%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    border-width: 3px;
+    border-color: rgb(253, 177, 163);
+    border-style: solid;
+}
+.head-card-problema{
+    background-color:rgb(253, 177, 163);
+    width: 100%;
+    height: 40px;
+    padding-top: 6px;
+    padding-left: 20px;
+}
+
+.img-sucess{
+    width: 25px;
+    margin-top: 7px;
+    margin-left: 5px;
+    margin-right: 10px;
+}
+
+.img-logo{
+    width: 70px;
+    margin-right: 10px;
+    margin-top: -35px;
+}
+.title-page{
+    font-size: 50px;
+    font-weight: bold;
+    margin-top: 5px;
+    color: rgb(56, 155, 221);
+}
+
+
+.inputTxt{
+    width: 60%;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+   
+}
+.inputTxt-Description{
+    width: 60%;
+    margin-bottom: 5px;
+    height: 80px;
+    padding: 10px;
+    border-radius: px;
+}
+
+.btn-primary{
+    width: 60%;
+    height: 45px;
+}
+
+.btn-opcao{
+    width: 30%;
+    height: 50px;
+    background-color: rgb(129, 255, 167);
+    font-weight: bold;
+    border: none;   
+}
+.btn-problema{
+    background-color: rgb(253, 177, 163);
+}
